# agiraph

./: .claudeignore  .cursorignore  .gitignore  HIGH_LEVEL_PLAN.md  POETRY_USAGE.md  PROVIDER_FIXES.md  README.md  agi  agiraph  config.toml  main.py  pyproject.toml  requirements.txt  run_server.py  test_providers.py
agiraph/: __init__.py  agent.py  claude_code.py  config.py  coordinator.py  events.py  message_bus.py  models.py  scheduler.py  server.py  worker.py
agiraph/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  text_fallback.py
agiraph/tools/: __init__.py  context.py  definitions.py  implementations.py  registry.py  setup.py
ai/: API_REFERENCE.md  ARCHITECTURE.md  CODING_GUIDELINES.md  COMPONENTS.md  COMPONENT_OVERVIEW.md  DATA_FLOW.md  README.md
app/: cli.py  config.py  executor.py  models.py  planner.py
app/providers/: factory.py  gemini_provider.py  minimax_provider.py
backend/: api.py  cli.py  config.py  server.py
backend/prompts/: __init__.py  planner_system.txt  planner_user.txt
backend/providers/: anthropic_provider.py  minimax_provider.py  (+1 more)
docs/: v2-A-plan.md  v2-A-prompts.md  v2-A-technical-1-core.md  v2-A-technical-2-runtime.md  v2-A-technical-3-memory-human.md  v2-A-technical-4-implementation.md  v2-A-technical.md  v2-autonomous-design.md  v2-autonomous-detailed.md  v2-competitive-landscape.md  v2-design.md  v2-plan.md  v2-user-stories.md
frontend/: README.md  index.html  load-config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js
tests/: TEST_HANDBOOK.md  test_api.py  test_events.py  test_message_bus.py  test_models.py  test_providers.py  test_tool_context.py  test_tools.py
v1_archive/: agiraph  main.py  test_providers.py
(+29 files in other folders)
