[tool.poetry]
name = "agiraph"
version = "0.1.0"
description = "AI Agent Orchestration Framework - Proof of concept for DAG-based AI agent collaboration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
anthropic = "^0.18.0"
google-genai = "^0.1.0"
httpx = "^0.25.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
rich = "^13.0.0"
asyncio-throttle = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
