[tool.poetry]
name = "agiraph"
version = "2.0.0"
description = "Agiraph v2-A — Autonomous AI Agent Framework with Emergent Graph Collaboration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "agiraph"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = ">=0.40.0"
openai = ">=1.0.0"
httpx = ">=0.25.0"
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
websockets = ">=13.0"
markdownify = ">=0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
ruff = ">=0.1.0"

[tool.poetry.scripts]
agiraph = "agiraph.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
